# sugaku-pad

./: .gitignore  README.md  project.yml  pyproject.toml
assets/demo/: .gitignore  build_demo_clip.py  build_diagrams.py
dev/: build-python-payload.sh  build_techbook.py  fetch-python-ios.sh  ipad-logs.sh
docs/: techbook.html
ios/: CanvasToolbar.swift  CanvasView.swift  ContentView.swift  MathAIApp.swift  MathNoteModel.swift  MathNoteView.swift  MathOcrService.swift  MathView.swift  PythonSolveService.swift  SolveResultView.swift  SolveService.swift  SolveSheet.swift  TechBookView.swift
ios/Bridge/: MathAI-Bridging-Header.h  PythonBridge.h  PythonBridge.m
ios/Resources/: techbook.html
ios/Spikes/: ComputeSpikeView.swift  MemoryProbe.swift  MlxOcrBenchView.swift  OcrSpikeView.swift  PythonSolveSpikeView.swift
ios/python_app/: bridge.py
mathai/: CanvasView.swift  MathAIApp.swift  __init__.py  __main__.py  cli.py  latex_input.py  solver.py
mathai/Spikes/: FoundationModelAvailabilityView.swift
mathai/tests/: __init__.py  test_extensions.py  test_latex_input.py  test_solver.py
spikes/compute/: eval_fm_vs_sympy.py  fm_answers.json  solver.py  test_solver.py
spikes/ocr/: bench_mlx.py  bench_mlx_accuracy.py  captured_predictions.json  eval_handwriting.py  eval_pix2tex.py  eval_solve_from_predictions.py  gen_synthetic.py  try_coreml.py
spikes/solve/: build_problems.py  grade_session.py  problems.json  reliability_injection.py
web/: index.html  server.py  smoke_test.py
webapp/: index.html  package-lock.json  package.json  vite.config.js
(+16 files in other folders)
